<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView

                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/image" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/welcome_back"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sign_in_to_continue"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">




                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/LoginEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:drawablePadding="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textColorHint="@color/black"
                        android:drawableStart="@drawable/ic_mail"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgotPassword"
                    android:text="@string/forgot_password"
                    android:textColor="@color/black"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/Loginbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_now"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:background="@drawable/buttons_background"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/backbtn"
                    android:textSize="20sp"
                    android:text="@string/don_t_have_an_account_sign_up_now"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>




            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



  </ScrollView
   >