<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/blue"
    tools:context=".RecipientRegistrationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView

                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/image" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recipient_registration"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_pic"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/profile_pic"
                    app:civ_border_width="2dp"
                    android:layout_gravity="center"
                    app:civ_border_color="@color/black"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enterfullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:hint="@string/enter_full_name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="15sp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">


                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/enterIDnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_id_number"
                        android:inputType="number"
                        android:drawablePadding="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textColorHint="@color/black"
                        android:drawableStart="@drawable/ic_number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phonenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:inputType="number"
                        android:drawablePadding="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textColorHint="@color/black"
                        android:drawableStart="@drawable/ic_phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/bloodGroupsSpinner"
                    android:background="@color/white"
                    android:entries="@array/bloodgroups"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:drawablePadding="15dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textColorHint="@color/black"
                        android:drawableStart="@drawable/ic_mail"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/black"
                    app:hintTextAppearance="@color/blue">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="15dp"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="15sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/regbutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:background="@drawable/buttons_background"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/backbtn"
                    android:textSize="15sp"
                    android:text="@string/have_an_account_sign_in"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</ScrollView>