<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/blue"
    tools:context=".RegistrationPart">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="@color/white"
        android:elevation="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView

                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/image"/>

            <TextView

                android:text="Did you know blood donation is safe and saves life?"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView

                android:text="@string/briefly_describe_yourself"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <Button
                    android:id="@+id/donorbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="DONOR REGISTRATION"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/black"
                    android:background="@drawable/buttons_background"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/recipientButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient_registration"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:background="@drawable/buttons_background"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/backbtn"
                    android:textSize="20sp"
                    android:text="@string/have_an_account_sign_in"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>